[metadata]
name = lstosa
description = Onsite analysis pipeline for the CTA LST-1
url = https://gitlab.cta-observatory.org/cta-array-elements/lst/analysis/lstosa
author = lstosa authors, CTA-LST project
author_email = dmorcuen@ucm.es
license = BSD-3
long_description = file: README.md

project_urls =
    Bug Tracker = https://gitlab.cta-observatory.org/cta-array-elements/lst/analysis/lstosa/-/issues
    Documentation = https://lstosa.readthedocs.io/
    Source Code = https://gitlab.cta-observatory.org/cta-array-elements/lst/analysis/lstosa

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD-3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.7

requires-dist = setuptools

[options]
python_requires = >=3.7

[pylint.FORMAT]
disable = logging-fstring-interpolation

[pycodestyle]
count = False
ignore = E501,W503,E203,W201
max-line-length = 90
statistics = True

