[metadata]
name = lstosa
version = 0.9.0
description = Onsite analysis pipeline for the CTA LST-1
url = https://github.com/cta-observatory/lstosa
author = lstosa developers, CTA-LST project
author_email = dmorcuen@ucm.es
license = BSD-3
long_description = file: README.md

project_urls =
    Bug Tracker = https://github.com/cta-observatory/lstosa/issues
    Documentation = https://lstosa.readthedocs.io/
    Source Code = https://github.com/cta-observatory/lstosa

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD-3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    astropy~=4.2
    lstchain==0.9.6
    ctapipe~=0.12.0
    matplotlib~=3.5
    numpy<1.22.0a0
    pandas
    pyyaml
    prov
    pydot
    pydotplus
    psutil
    click
    toml
    pymongo
    gammapy~=0.19.0

package_dir =
    =osa

[options.entry_points]
console_scripts =
    sequencer = osa.scripts.sequencer:main
    closer = osa.scripts.closer:main
    copy_datacheck = osa.scripts.copy_datacheck:main
    datasequence = osa.scripts.datasequence:main
    sequencer_webmaker = osa.scripts.sequencer_webmaker:main
    show_run_summary = osa.scripts.show_run_summary:main
    provprocess = osa.scripts.provprocess:main
    simulate_processing = osa.scripts.simulate_processing:main
    calibration_pipeline = osa.scripts.calibration_pipeline:main
    dl3_stage = osa.workflow.dl3:main
    theta2_significance = osa.high_level.significance:main
    source_coordinates = osa.nightsummary.set_source_coordinates:main
    reprocessing = osa.scripts.reprocessing:main
    reprocess_longterm = osa.scripts.reprocess_longterm:main
    gain_selection = osa.scripts.gain_selection:main

[options.extras_require]
test =
    pytest
    pytest-cov

docs =
    sphinx
    sphinx_rtd_theme
    sphinx_automodapi
    sphinx_argparse
    sphinx-autoapi
    numpydoc

[options.package_data]
* = cfg/sequencer.cfg
osa.provenance.config = definition.yaml, logger.yaml
osa.webserver = osa.css

[pylint.FORMAT]
disable = logging-fstring-interpolation

[pycodestyle]
count = False
ignore = E501,W503,E203,W201
max-line-length = 90
statistics = True

