[metadata]
name = lstosa
description = Onsite analysis pipeline for the CTA LST-1
url = https://github.com/cta-observatory/lstosa
author = lstosa developers, CTA-LST project
author_email = dmorcuen@ucm.es
license = BSD 3-Clause License
long_description = file: README.md
long_description_content_type = text/markdown

project_urls =
    Bug Tracker = https://github.com/cta-observatory/lstosa/issues
    Documentation = https://lstosa.readthedocs.io/
    Source Code = https://github.com/cta-observatory/lstosa

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3

[options]
packages = find:
setup_requires = setuptools_scm
python_requires = >=3.9
install_requires =
    astropy~=5.0
    lstchain~=0.10.0
    matplotlib~=3.7
    numpy
    pandas
    pyyaml
    prov
    pydot
    pydotplus
    psutil
    click
    toml
    pymongo
    gammapy~=1.1
    tenacity

zip_safe = no
include_package_data = True

[options.packages.find]
exclude = osa._dev_version

[options.entry_points]
console_scripts =
    sequencer = osa.scripts.sequencer:main
    closer = osa.scripts.closer:main
    autocloser = osa.scripts.autocloser:main
    copy_datacheck = osa.scripts.copy_datacheck:main
    datasequence = osa.scripts.datasequence:main
    sequencer_webmaker = osa.scripts.sequencer_webmaker:main
    show_run_summary = osa.scripts.show_run_summary:main
    show_run_summary_tcu = osa.scripts.show_run_summary_tcu:main
    provprocess = osa.scripts.provprocess:main
    simulate_processing = osa.scripts.simulate_processing:main
    calibration_pipeline = osa.scripts.calibration_pipeline:main
    dl3_stage = osa.workflow.dl3:main
    theta2_significance = osa.high_level.significance:main
    source_coordinates = osa.nightsummary.set_source_coordinates:main
    reprocessing = osa.scripts.reprocessing:main
    reprocess_longterm = osa.scripts.reprocess_longterm:main
    gain_selection = osa.scripts.gain_selection:main
    update_source_catalog = osa.scripts.update_source_catalog:main

[options.extras_require]
setup = setuptools_scm

test =
    pytest
    pytest-cov
    freezegun

docs =
    sphinx
    sphinx_rtd_theme
    sphinx_automodapi
    sphinx_argparse
    sphinx-autoapi
    numpydoc

[options.package_data]
osa.configs = sequencer.cfg
osa.provenance.config = definition.yaml, logger.yaml
osa.webserver = osa.css

[pylint.FORMAT]
disable = logging-fstring-interpolation

[pycodestyle]
count = False
ignore = E501,W503,E203,W201
max-line-length = 100
statistics = True

[flake8]
max-line-length = 100
exclude =
    tests/
    *test*
    osa/scripts/update_source_catalog.py
